# call-java-from-cpp

./: CMakeLists.txt  README.md  main.cpp  pom.xml
src/main/java/: Main.java
